--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ P {
               <span class="style7"><font style="FONT-SIZE: 30pt">
 			<span lang="zh-cn">太阳城（温馨提醒您）</span><br />
               请点击或收藏以下新网址进入</font></span><p>
-              <img border="0" src="http://www.56666.com/shou.gif"><span lang="zh-cn"><font size="6"><span style="font-weight: 700; background-color: #FFFF00"><a href="http://www.sun0000.com/太阳城娱乐城.exe"><font color="#000000">点击下载资讯端</font></a></span></font><font size="5">，<b>任意时间都知道太阳城最新备用网址</b></font></span></p>
+              <img border="0" src="http://www.56666.net/shou.gif"><span lang="zh-cn"><font size="6"><span style="font-weight: 700; background-color: #FFFF00"><a href="http://www.sun0000.com/太阳城娱乐城.exe"><font color="#000000">点击下载资讯端</font></a></span></font><font size="5">，<b>任意时间都知道太阳城最新备用网址</b></font></span></p>
 			<p><font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000">
 			<strong><a target="_blank" href="http://www.h2646.com/">
 			<font color="#FF0000">http://www.<span lang="zh-cn">h2646.com</span>/</font></a></strong></font> <a href="http://www.h2646.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
