--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@ P {
               <img border="0" src="http://www.56666.net/shou.gif"><span lang="zh-cn"><font size="6"><span style="font-weight: 700; background-color: #FFFF00"><a href="http://www.sun0000.com/太阳城娱乐城.exe"><font color="#000000">点击下载资讯端</font></a></span></font><font size="5">，<b>任意时间都知道太阳城最新备用网址</b></font></span></p>
 			<p><font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000">
 			<strong><a target="_blank" href="http://www.0235a.com/">
-			<font color="#FF0000">http://www.<span lang="zh-cn">0235a.com</span>/</font></a></strong></font> <a href="http://www.w2646.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
+			<font color="#FF0000">http://www.<span lang="zh-cn">0235a.com</span>/</font></a></strong></font> <a href="http://www.0235a.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
 			点击加入收藏</strong></font></a> <br />
 			<br />
               <font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000"><strong>
 			<a target="_blank" href="http://www.0235d.com/">
-			<font color="#FF0000">http://www.<span lang="zh-cn">0235d.com</span>/</font></a></strong></font> <a href="http://www.v2646.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
+			<font color="#FF0000">http://www.<span lang="zh-cn">0235d.com</span>/</font></a></strong></font> <a href="http://www.0235d.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
 			点击加入收藏</strong></font></a> 
 			<p>
               <font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000"><strong>
 			<a target="_blank" href="http://www.0235c.com/">
-			<font color="#FF0000">http://www.<span lang="zh-cn">0235c</span>.<span lang="zh-cn">com</span>/</font></a></strong></font> <a href="http://www.tyc63.com/" onclick="window.external.addFavorite('http://www.tyc63.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
+			<font color="#FF0000">http://www.<span lang="zh-cn">0235c</span>.<span lang="zh-cn">com</span>/</font></a></strong></font> <a href="http://www.0235c.com/" onclick="window.external.addFavorite('http://www.tyc63.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
 			点击加入收藏</strong></font></a> 
 			</p>
 			<p> <br />
