--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ P {
           <tr>
             <td align="center" bgcolor="#ffffff" height="166"><br />
               <span class="style7"><font style="FONT-SIZE: 30pt">
-			<span lang="zh-cn">太阳城（温馨提醒您）</span><br />
+			<span lang="zh-cn">您访问的网址将在10天后停用<br>
+			太阳城（温馨提醒您）</span><br />
               请点击或收藏以下新网址进入</font></span><p>
               <span lang="zh-cn"><font size="6"><span style="font-weight: 700; background-color: #FFFF00"><a href="http://www.sun0000.com/太阳城娱乐城.exe"><font color="#000000">点击下载资讯端</font></a></span></font><font size="5">，<b>任意时间都知道太阳城最新备用网址</b></font></span></p>
 			<p><font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000">
