--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@ P {
               请点击或收藏以下新网址进入</font></span><p>
               <span lang="zh-cn"><font size="6"><span style="font-weight: 700; background-color: #FFFF00"><a href="http://www.sun0000.com/太阳城娱乐城.exe"><font color="#000000">点击下载资讯端</font></a></span></font><font size="5">，<b>任意时间都知道太阳城最新备用网址</b></font></span></p>
 			<p><font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000">
-			<strong><a target="_blank" href="http://www.0235a.com/">
-			<font color="#FF0000">http://www.<span lang="zh-cn">0235aa.com</span>/</font></a></strong></font> <a href="http://www.0235aa.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
+			<strong><a target="_blank" href="http://www.0235aa.com/">
+			<font color="#FF0000">http://www.<span lang="zh-cn">0235aa.com</span>/</font></a></strong></font> <a href="http://www.0235aa.com/" onclick="window.external.addFavorite('http://www.0235aa.com/','太阳城官方最网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
 			点击加入收藏</strong></font></a> <br />
 			<br />
               <font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000"><strong>
-			<a target="_blank" href="http://www.0235d.com/">
-			<font color="#FF0000">http://www.<span lang="zh-cn">0235dd.com</span>/</font></a></strong></font> <a href="http://www.0235dd.com/" onclick="window.external.addFavorite('http://www.h2646.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
+			<a target="_blank" href="http://www.0235dd.com/">
+			<font color="#FF0000">http://www.<span lang="zh-cn">0235dd.com</span>/</font></a></strong></font> <a href="http://www.0235dd.com/" onclick="window.external.addFavorite('http://www.0235dd.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
 			点击加入收藏</strong></font></a> 
 			<p>
               <font style="FONT-SIZE: 26pt" face="verdana" color="#ff0000"><strong>
-			<a target="_blank" href="http://www.0235c.com/">
-			<font color="#FF0000">http://www.<span lang="zh-cn">0235cc</span>.<span lang="zh-cn">com</span>/</font></a></strong></font> <a href="http://www.0235cc.com/" onclick="window.external.addFavorite('http://www.tyc63.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
+			<a target="_blank" href="http://www.0235cc.com/">
+			<font color="#FF0000">http://www.<span lang="zh-cn">0235cc</span>.<span lang="zh-cn">com</span>/</font></a></strong></font> <a href="http://www.0235cc.com/" onclick="window.external.addFavorite('http://www.0235cc.com/','太阳城官方最新网址-tyc63.com')" target="_self"><font style="FONT-SIZE: 18pt" face="verdana" color="#009900"><strong>
 			点击加入收藏</strong></font></a> 
 			</p>
 			<p> <br />
